<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_popular"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/title_popular" />
    <item
        android:id="@+id/navigation_now_playing"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/title_now_playing" />
    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/title_upcoming" />
    <!--<item
        andrextraPathd:idextraPath@+id/navigation_search"
        android:icon="@android:drawable/ic_menu_slideshow"
        android:title="@string/title_search" />
    <item
        andrextraPathd:idextraPath@+id/navigation_more"
        android:icon="@android:drawable/ic_menu_slideshow"
        android:title="@string/title_now_playing" />-->
</menu>
