<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="yamd.g13.pdm.leic.isel.yamd.view.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <LinearLayout
        android:id="@+id/detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="50px"
            android:text="@string/overview"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/movie_overview"/>

        <TextView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="50px"
            android:text="@string/vote_average"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_vote_average"
            android:isIndicator="true"
            android:layout_gravity="center"
            style="?android:attr/ratingBarStyleIndicator"
            android:stepSize="0.01"
            android:numStars="10"/>

        <TextView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="50px"
            android:text="@string/follow"/>

        <CheckBox
            android:id="@+id/follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/followMovieText" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
